[gd_scene load_steps=3 format=3 uid="uid://bdpacdmx3wxto"]

[ext_resource type="Script" uid="uid://cwes86u1udrxc" path="res://scripts/CharacterSelection.gd" id="1_o6o0h"]
[ext_resource type="PackedScene" path="res://tscns/Background.tscn" id="2_ta0h7"]

[node name="CharacterSelection" type="Node"]
script = ExtResource("1_o6o0h")

[node name="Background" parent="." instance=ExtResource("2_ta0h7")]

[node name="Hand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 640.0
offset_bottom = 640.0

[node name="SelectCharacterContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1792.0
offset_bottom = 2048.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SelectCharacter" type="Button" parent="SelectCharacterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "Choose This Character
"

[node name="ScrollHandLeftContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 1536.0
offset_right = -1024.0
offset_bottom = 1792.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollHandLeft" type="Button" parent="ScrollHandLeftContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "< LEFT <"

[node name="ScrollHandRightContainer" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 1024.0
offset_top = 1536.0
offset_bottom = 1792.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollHandRight" type="Button" parent="ScrollHandRightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "> RIGHT >"
